# context-machine

./: dep.txt  pyproject  pyproject.toml
app/: main.py  models.py
app/core/: config.py  database.py  embedding.py  vector.py
app/schema/: document.py
app/services/: FileService.py  chunk_service.py  document.py  document_parser.py  embeddings.py  file.py
