[project]
name = "context-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.120.3",
    "fastembed>=0.7.3",
    "httpx>=0.28.1",
    "pdfminer-six>=20250506",
    "poethepoet>=0.37.0",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pydub>=0.25.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "sqlalchemy[asyncio]>=2.0.44",
]


[tool.poe.tasks]
run = "uvicorn app.main:app"
